# imgSEOfriend

./: .gitignore  HEIC_HEIF_SUPPORT.md  README.md  ai_service.py  app.py  before_after_widget.py  build_multi.py  clean.py  config_manager.py  dark_theme.qss  imgSEOfriend.spec  main.py  main_window.py  pyproject.toml  requirements.txt  settings_dialog.py  worker.py  需求.md
docs/: DEVELOPMENT.md  PROJECT_SUMMARY.md  SECURITY_GUIDE.md
md/: BUILD_GUIDE.md  RELEASE_NOTES.md
scripts/: build_simple.spec  imgSEOfriend_windows.spec  version_info.txt
src/imgseofriend/: __init__.py  ai_service.py  app.py  before_after_widget.py  build.py  config_manager.py  main_window.py  settings_dialog.py  worker.py
tests/: test_basic.py
